--- a/clusters/my-k3s/apps/base/mysql/mysql-secret.sops.yaml
+++ b/clusters/my-k3s/apps/base/mysql/mysql-secret.sops.yaml
@@ -1,24 +1,24 @@
-apiVersion: v1
-kind: Secret
+apiVersion: ENC[AES256_GCM,data:BLo=,iv:4+d7czkBtOruNHVoWVsy9CRkn3xa4oyIaRGdxa47We4=,tag:ZjUgekyMvC3Tiz7R+W/TuA==,type:str]
+kind: ENC[AES256_GCM,data:nOLihuzx,iv:ViIFQGX2OSX3GMt0VAsqvq2fjvbcVQSmYolFaBmq7w4=,tag:UhOolMo0z/BVa/FXoZGmmA==,type:str]
 metadata:
-    name: mysql-secret
-    namespace: default
-type: Opaque
+    name: ENC[AES256_GCM,data:y+WylDtBvIDI+WIR,iv:+II8IAaI6V7UleN7eU1Nnl5JOLUMWKMjHXjp1aWFztQ=,tag:Li5hyQbfbB4IY94EvnEkRA==,type:str]
+    namespace: ENC[AES256_GCM,data:3jG27KpKUw==,iv:pMvyJ8VwlvXaxyXnZ2Q4hY4uVo/yTaowtNnKG+WGgzg=,tag:wySnCgMpK80RTR6iQPTQGw==,type:str]
+type: ENC[AES256_GCM,data:E+wgGGr5,iv:JpcvZ8T/nR3fjAVTmT9nlnRHivy3MsL9+28hCxdaA/Y=,tag:kmbuyn9YpK0ywr/dIXUzDQ==,type:str]
 stringData:
-    username: ENC[AES256_GCM,data:UkIpMhXz,iv:VIym7qtC8eDd3/MJi8RJfnmkbjNqK3P9hFQ5IbXKsDs=,tag:/lCXYMqW20O4R3w89HlPrA==,type:str]
-    password: ENC[AES256_GCM,data:YGgosVkr,iv:P2eIcQsNowCQTYegHQf02dlFrCopXGmgSMC9schTZ2c=,tag:DQgmzmogT4C1OlQu5ysryw==,type:str]
+    username: ENC[AES256_GCM,data:e2ObOe1M,iv:u7/xZfWPzIIkqvyI48A+x9co0OjK0/VsvAgRV6KPZew=,tag:n0hV1KnFjVWQGKwRH5y/og==,type:str]
+    password: ENC[AES256_GCM,data:39WCxmhN,iv:ffSnFtA4CKCekXicwzZJhi9TXgr75MGR7FrDM0+OX88=,tag:ys5LyP5Q+E4rsxkfzEj0tA==,type:str]
 sops:
     age:
-        - recipient: age17nd2u5umaxlxv2vca50kch8yectg6edl8rk5lyuc8md9nswwje8qatcpmx
+        - recipient: age1usq54dtk2sgfg8fqteey0eaavgxp36mdjml2jfmtfakjw3hm892q38wjtj
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmei9UdUY1WUhFREFxUWFY
-            Y3dZTFJRYWphL3NFZVlhOVpFR0RlajhyaFNvClRHL2N6SDVYRjZydG44NTdYWmsz
-            eVNYWXdhakZKRjc0RThUc3B2K1dydzAKLS0tIEJlY3NxZTVEdE1jV08wK2JXbHk1
-            MnZtYVVzT2lLSTR3RnNzeVZPSy9XOVUK/u/Fr2ixhz0qQA+bkEyJo+L8wYCxeo6X
-            6emy/CH3z0BM50DD2Bet7RzCmQUX54nP58/mDC0QiQJ04BS6XIZX3A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIVGxzY0FaN21MbmxQTjhT
+            SGtFZjduRkQwY2VXUHl2dm9DSHc0K1JDZmkwClMyV05vRHVTbVZ4aEhBV2RNei93
+            ZHpOYWFxYjdCdVVJcHlsYVB1SnVLQ1kKLS0tIC9XY0FEY2FORUZtSFFDVUQvQnJO
+            bTZhREJqSzV3a0VWZnNUcjAycis1WDgKf3QI8d81TnHa9XBdLwnAUUSUs6aJFyAO
+            fNVCcL+boYaJQGK59mVm/YXHhR4d5y9ZZ66gvvGWELHakTOGi/GG2Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-10-30T06:46:22Z"
-    mac: ENC[AES256_GCM,data:I/eH1SPLkv2nOV9cdVXMjmbnEsZaCPO3ZuWq+9vRo1R9NbekDUzZ8su9ngn5bG2UE5HxpOIy2KrkhlWiL2CBSQVUKCpiLYa+rIw5vBVq9JXitG++68vNJxGasOOixQx1UvQoSOVlTe5SUorNGtZ5UgFBhABiDsN3v8byCTZlUbU=,iv:ZFolMzVOfcYcccLvGXZBoEGFrJqJfPv9UenFqij77vw=,tag:SHguZJRGb0FwnDYtzrq1Zw==,type:str]
-    encrypted_regex: ^(data|stringData)$
+    lastmodified: "2025-11-02T08:41:57Z"
+    mac: ENC[AES256_GCM,data:hAYfB/4lZrCOxY8sPoS3kfRYU++9pE3GrdutM6CFhasK4dPQPy2tsLx1CX4LIww2Y8Upm6iH/3oUwcHd1E5hDiItFmdIaBPSrbAgk4hXw76Hzfnfd9lM8BQXJlMMNVI3B9QCyJxOegPHhHuDv6YT99Jviyh9Es41/mAh/RCkNWs=,iv:YA4vPmEcsm+wysnEjFoHKYh74PF6Cow58qrV3HmDzkE=,tag:cSQK0KvQYmNU1OUISjhABA==,type:str]
+    unencrypted_suffix: _unencrypted
     version: 3.11.0
