--- a/clusters/my-k3s/apps/base/mysql/mysql-secret.sops.yaml
+++ b/clusters/my-k3s/apps/base/mysql/mysql-secret.sops.yaml
@@ -1,24 +1,24 @@
-apiVersion: ENC[AES256_GCM,data:BLo=,iv:4+d7czkBtOruNHVoWVsy9CRkn3xa4oyIaRGdxa47We4=,tag:ZjUgekyMvC3Tiz7R+W/TuA==,type:str]
-kind: ENC[AES256_GCM,data:nOLihuzx,iv:ViIFQGX2OSX3GMt0VAsqvq2fjvbcVQSmYolFaBmq7w4=,tag:UhOolMo0z/BVa/FXoZGmmA==,type:str]
+apiVersion: ENC[AES256_GCM,data:yTo=,iv:ZjRcjUIBNJ6uPayoRVf1W3DwhvfIXPJ9yPRo1SUVGF0=,tag:n4Eub/XLPOYMdyMNZfVQ1w==,type:str]
+kind: ENC[AES256_GCM,data:JyfCfp3M,iv:BHQhv/GafWbe7KfxCg4T5fjSsiwmXLfNS+8zfk5skvg=,tag:RkxnZEuYBK5MN4dE5iZLPQ==,type:str]
 metadata:
-    name: ENC[AES256_GCM,data:y+WylDtBvIDI+WIR,iv:+II8IAaI6V7UleN7eU1Nnl5JOLUMWKMjHXjp1aWFztQ=,tag:Li5hyQbfbB4IY94EvnEkRA==,type:str]
-    namespace: ENC[AES256_GCM,data:3jG27KpKUw==,iv:pMvyJ8VwlvXaxyXnZ2Q4hY4uVo/yTaowtNnKG+WGgzg=,tag:wySnCgMpK80RTR6iQPTQGw==,type:str]
-type: ENC[AES256_GCM,data:E+wgGGr5,iv:JpcvZ8T/nR3fjAVTmT9nlnRHivy3MsL9+28hCxdaA/Y=,tag:kmbuyn9YpK0ywr/dIXUzDQ==,type:str]
+    name: ENC[AES256_GCM,data:bVd6/va7YwmttzDH,iv:iyg1OtiI49WhEKXlmJssAdapUotFJ9NtpabGLzOdDZs=,tag:sEC5YZn4gN060OJSt1q0Eg==,type:str]
+    namespace: ENC[AES256_GCM,data:P9iYdckshQ==,iv:IsLflAOboli2Q6ODIDTdhdmkwZVNILF1BvszU4cLKTs=,tag:PohC0lvg3NFWYNinOFI7pw==,type:str]
+type: ENC[AES256_GCM,data:32mREOsq,iv:wLJLAe3pBRdVyQzgnM9t/VZelBjAl9IiUxU01BZSdG0=,tag:ZVqh2ZkHsey9rEzs01fBIw==,type:str]
 stringData:
-    username: ENC[AES256_GCM,data:e2ObOe1M,iv:u7/xZfWPzIIkqvyI48A+x9co0OjK0/VsvAgRV6KPZew=,tag:n0hV1KnFjVWQGKwRH5y/og==,type:str]
-    password: ENC[AES256_GCM,data:39WCxmhN,iv:ffSnFtA4CKCekXicwzZJhi9TXgr75MGR7FrDM0+OX88=,tag:ys5LyP5Q+E4rsxkfzEj0tA==,type:str]
+    username: ENC[AES256_GCM,data:HQHA9Q/z,iv:qssAG3KZwPSFNQWJzvrIWrjHZQbDo1f19cl5Fsx5Tc8=,tag:y1zIKulFuuagiKxD0Qx3NQ==,type:str]
+    password: ENC[AES256_GCM,data:4eIud6rv,iv:F+/hsY47AbjecyC4rqprxX7HOmnWD9IcAxHnZXFqJLE=,tag:3Buw+vRl8VrNzFHO6e0gSw==,type:str]
 sops:
     age:
-        - recipient: age1usq54dtk2sgfg8fqteey0eaavgxp36mdjml2jfmtfakjw3hm892q38wjtj
+        - recipient: age1ggqm0janjs9uepzqvyyk864denfdd9qa7jusajlndt6feqchtf3q35s5d2
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIVGxzY0FaN21MbmxQTjhT
-            SGtFZjduRkQwY2VXUHl2dm9DSHc0K1JDZmkwClMyV05vRHVTbVZ4aEhBV2RNei93
-            ZHpOYWFxYjdCdVVJcHlsYVB1SnVLQ1kKLS0tIC9XY0FEY2FORUZtSFFDVUQvQnJO
-            bTZhREJqSzV3a0VWZnNUcjAycis1WDgKf3QI8d81TnHa9XBdLwnAUUSUs6aJFyAO
-            fNVCcL+boYaJQGK59mVm/YXHhR4d5y9ZZ66gvvGWELHakTOGi/GG2Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzS3pyM3hxaTNVaXQzRmV1
+            RHdhQzRqZUNHTW12N0MrZlRnWkpDZFRVdUVrCjF4aU5Mc28xbUw4MmRQMnMrMDRh
+            V0JhdCswVk8yRFU3RHIyaXdvTVNPcWsKLS0tIFU4aFBpMzBVMkRrbXhnQXJWc2xK
+            WDAveEhYdGROb1BVdUpCak51WFU4UkEKSlW4TZlXgqL2s2xf4C7VUwS9g1hpUQ6i
+            vtTvqFRAazEIffPOzNUp/uTf/+sRdYt4rRW0cyxfDQmnFAixS8W95w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-11-02T08:41:57Z"
-    mac: ENC[AES256_GCM,data:hAYfB/4lZrCOxY8sPoS3kfRYU++9pE3GrdutM6CFhasK4dPQPy2tsLx1CX4LIww2Y8Upm6iH/3oUwcHd1E5hDiItFmdIaBPSrbAgk4hXw76Hzfnfd9lM8BQXJlMMNVI3B9QCyJxOegPHhHuDv6YT99Jviyh9Es41/mAh/RCkNWs=,iv:YA4vPmEcsm+wysnEjFoHKYh74PF6Cow58qrV3HmDzkE=,tag:cSQK0KvQYmNU1OUISjhABA==,type:str]
+    lastmodified: "2025-11-02T09:08:18Z"
+    mac: ENC[AES256_GCM,data:QGBtdKXWLqs1AZOk5sgryDx66p2exCta+imy/JXilmwrIQCW+JmXh9xywpkuY5mrOZwgwd0777goPam2B0UrCYeUYahm7eiTpBiPwk/KRpCPk8JMO0PLBLk1vQ7FyMDup2/7xwHehtzCP2Tk88C36jz+TUV0wocDmG7jce1a4yY=,iv:y+/Bj2WyCBzdOrPK2LRi07iLW9dstxYqblL+qOEHYd0=,tag:jbBq+bas0pZyYJ/D0BFjYQ==,type:str]
     unencrypted_suffix: _unencrypted
     version: 3.11.0
