--- a/clusters/my-k3s/apps/base/mysql/mysql-secret.sops.yaml
+++ b/clusters/my-k3s/apps/base/mysql/mysql-secret.sops.yaml
@@ -1,24 +1,24 @@
-apiVersion: ENC[AES256_GCM,data:yTo=,iv:ZjRcjUIBNJ6uPayoRVf1W3DwhvfIXPJ9yPRo1SUVGF0=,tag:n4Eub/XLPOYMdyMNZfVQ1w==,type:str]
-kind: ENC[AES256_GCM,data:JyfCfp3M,iv:BHQhv/GafWbe7KfxCg4T5fjSsiwmXLfNS+8zfk5skvg=,tag:RkxnZEuYBK5MN4dE5iZLPQ==,type:str]
+apiVersion: ENC[AES256_GCM,data:0+k=,iv:RMBzHWjVql65S8E7ba7bgD0RJXx8Abi5snT9hYaIq3w=,tag:0T6LIYryyfqgZGNXFmUx9Q==,type:str]
+kind: ENC[AES256_GCM,data:Ct2WbBQt,iv:ekdKmNTwS2RT6S1iiMVbx0b3P2cOT6AAQQan7bdIu7A=,tag:WflcVLZnIKQkDZjm/nvfUA==,type:str]
 metadata:
-    name: ENC[AES256_GCM,data:bVd6/va7YwmttzDH,iv:iyg1OtiI49WhEKXlmJssAdapUotFJ9NtpabGLzOdDZs=,tag:sEC5YZn4gN060OJSt1q0Eg==,type:str]
-    namespace: ENC[AES256_GCM,data:P9iYdckshQ==,iv:IsLflAOboli2Q6ODIDTdhdmkwZVNILF1BvszU4cLKTs=,tag:PohC0lvg3NFWYNinOFI7pw==,type:str]
-type: ENC[AES256_GCM,data:32mREOsq,iv:wLJLAe3pBRdVyQzgnM9t/VZelBjAl9IiUxU01BZSdG0=,tag:ZVqh2ZkHsey9rEzs01fBIw==,type:str]
+    name: ENC[AES256_GCM,data:CsGV8rp640RB7c1b,iv:+tIjW146PN2OUFpBVeDxtwHZVrG7nVfZDsD+FYBBM0w=,tag:At+b4j4qjn8Njg4KGsTzgA==,type:str]
+    namespace: ENC[AES256_GCM,data:I8/Bgqck2w==,iv:vTGdoQH91XPPnT1eqYnt9e9SI+rU0jNEctULGDWfZ8s=,tag:3l9vB+5Y6RF74xfD16yp0g==,type:str]
+type: ENC[AES256_GCM,data:GYhLOUUA,iv:R1kDHA2/5VYqOEiOL/wpc3pzHXgfP3TWMRHoS/lLcXc=,tag:18c44OvP0pRDhl9aCuDw7A==,type:str]
 stringData:
-    username: ENC[AES256_GCM,data:HQHA9Q/z,iv:qssAG3KZwPSFNQWJzvrIWrjHZQbDo1f19cl5Fsx5Tc8=,tag:y1zIKulFuuagiKxD0Qx3NQ==,type:str]
-    password: ENC[AES256_GCM,data:4eIud6rv,iv:F+/hsY47AbjecyC4rqprxX7HOmnWD9IcAxHnZXFqJLE=,tag:3Buw+vRl8VrNzFHO6e0gSw==,type:str]
+    username: ENC[AES256_GCM,data:U3XwYZo4,iv:H81vRXucPYEDt/ECJdsF0ZKCQ/3bnXx0sDZNpAUzkDw=,tag:wdKID5BiO74dimrL7FWOVg==,type:str]
+    password: ENC[AES256_GCM,data:lBwf2b+B,iv:7ZxgXP+vONMdGV/p+MdgeV0cPPjQZwsDZNvudCdM5Fs=,tag:ILZajvKXp/7cQmTuKUUJXg==,type:str]
 sops:
     age:
-        - recipient: age1ggqm0janjs9uepzqvyyk864denfdd9qa7jusajlndt6feqchtf3q35s5d2
+        - recipient: age1usq54dtk2sgfg8fqteey0eaavgxp36mdjml2jfmtfakjw3hm892q38wjtj
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzS3pyM3hxaTNVaXQzRmV1
-            RHdhQzRqZUNHTW12N0MrZlRnWkpDZFRVdUVrCjF4aU5Mc28xbUw4MmRQMnMrMDRh
-            V0JhdCswVk8yRFU3RHIyaXdvTVNPcWsKLS0tIFU4aFBpMzBVMkRrbXhnQXJWc2xK
-            WDAveEhYdGROb1BVdUpCak51WFU4UkEKSlW4TZlXgqL2s2xf4C7VUwS9g1hpUQ6i
-            vtTvqFRAazEIffPOzNUp/uTf/+sRdYt4rRW0cyxfDQmnFAixS8W95w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBHMFVGOUUrTTlEY1VONmNY
+            RlZOYllFc1R5cEFUR1JSYVg4VUhkVkcwRW5jCnkzSjd4aUhvMGRuQWtXa1R6R2RL
+            TTJKRXlmRW9pYjUzS0FJdGlyV0lvQ1kKLS0tIE1JSWdkMkN0NlhHb09veGdCY0J5
+            S21LcmdQSnhIb2FuNHRoSlN2aUNLb0UKep6usYIBZGRCWx6xFNWYzN/MKrxVRhVr
+            D/Did7EaUkfEvKYuekRbr/zXByr9P63w9sdEnkyQWXTlLjDwHz9PQg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-11-02T09:08:18Z"
-    mac: ENC[AES256_GCM,data:QGBtdKXWLqs1AZOk5sgryDx66p2exCta+imy/JXilmwrIQCW+JmXh9xywpkuY5mrOZwgwd0777goPam2B0UrCYeUYahm7eiTpBiPwk/KRpCPk8JMO0PLBLk1vQ7FyMDup2/7xwHehtzCP2Tk88C36jz+TUV0wocDmG7jce1a4yY=,iv:y+/Bj2WyCBzdOrPK2LRi07iLW9dstxYqblL+qOEHYd0=,tag:jbBq+bas0pZyYJ/D0BFjYQ==,type:str]
+    lastmodified: "2025-11-03T04:17:31Z"
+    mac: ENC[AES256_GCM,data:W5Z0lB7RX9wGPiFnjESdH0nk1RwiwY7sWZc4+HXdDtD1XSj4pAAyW/n5xMxQMLoin0kGAS7fIj1fHjM3i2yRN26XhkdX2GjMCNh3lxGVQQSpGp5EiokKI/R5vhfednph2INSBxIBceuMq0vsw4Ty7qU9s+mkKEh79bKAt/amFYY=,iv:t52YEiD13vr7sASxR3GEtni2iqKFPNq7qf2lZQJiLi8=,tag:M0yGdvrKZf9AHCsqYstueg==,type:str]
     unencrypted_suffix: _unencrypted
     version: 3.11.0
