--- a/clusters/my-k3s/apps/base/mysql/mysql-secret.sops.yaml
+++ b/clusters/my-k3s/apps/base/mysql/mysql-secret.sops.yaml
@@ -1,24 +1,24 @@
-apiVersion: ENC[AES256_GCM,data:0+k=,iv:RMBzHWjVql65S8E7ba7bgD0RJXx8Abi5snT9hYaIq3w=,tag:0T6LIYryyfqgZGNXFmUx9Q==,type:str]
-kind: ENC[AES256_GCM,data:Ct2WbBQt,iv:ekdKmNTwS2RT6S1iiMVbx0b3P2cOT6AAQQan7bdIu7A=,tag:WflcVLZnIKQkDZjm/nvfUA==,type:str]
+apiVersion: v1
+kind: Secret
 metadata:
-    name: ENC[AES256_GCM,data:CsGV8rp640RB7c1b,iv:+tIjW146PN2OUFpBVeDxtwHZVrG7nVfZDsD+FYBBM0w=,tag:At+b4j4qjn8Njg4KGsTzgA==,type:str]
-    namespace: ENC[AES256_GCM,data:I8/Bgqck2w==,iv:vTGdoQH91XPPnT1eqYnt9e9SI+rU0jNEctULGDWfZ8s=,tag:3l9vB+5Y6RF74xfD16yp0g==,type:str]
-type: ENC[AES256_GCM,data:GYhLOUUA,iv:R1kDHA2/5VYqOEiOL/wpc3pzHXgfP3TWMRHoS/lLcXc=,tag:18c44OvP0pRDhl9aCuDw7A==,type:str]
+    name: mysql-secret
+    namespace: default
+type: Opaque
 stringData:
-    username: ENC[AES256_GCM,data:U3XwYZo4,iv:H81vRXucPYEDt/ECJdsF0ZKCQ/3bnXx0sDZNpAUzkDw=,tag:wdKID5BiO74dimrL7FWOVg==,type:str]
-    password: ENC[AES256_GCM,data:lBwf2b+B,iv:7ZxgXP+vONMdGV/p+MdgeV0cPPjQZwsDZNvudCdM5Fs=,tag:ILZajvKXp/7cQmTuKUUJXg==,type:str]
+    username: ENC[AES256_GCM,data:DxeV97m7,iv:lZuZdJoDLe+/0ajij2V4hmk5J6uhF+OulIQ/zYRnp1g=,tag:+dEmkQHY6PDGlLkt1thl9g==,type:str]
+    password: ENC[AES256_GCM,data:R7gtvGc0,iv:2Kg7XqtvTPG9/BOADJHeLh5ukI4mtSHqFbALdrau15I=,tag:eEuqJE1RrPWRwQyZqVMvRQ==,type:str]
 sops:
     age:
-        - recipient: age1usq54dtk2sgfg8fqteey0eaavgxp36mdjml2jfmtfakjw3hm892q38wjtj
+        - recipient: age1es7njt8znvumjqe0swas2vh5c7t3ndzut2knrzxjnpuqcu6x5atqgg7y9v
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBHMFVGOUUrTTlEY1VONmNY
-            RlZOYllFc1R5cEFUR1JSYVg4VUhkVkcwRW5jCnkzSjd4aUhvMGRuQWtXa1R6R2RL
-            TTJKRXlmRW9pYjUzS0FJdGlyV0lvQ1kKLS0tIE1JSWdkMkN0NlhHb09veGdCY0J5
-            S21LcmdQSnhIb2FuNHRoSlN2aUNLb0UKep6usYIBZGRCWx6xFNWYzN/MKrxVRhVr
-            D/Did7EaUkfEvKYuekRbr/zXByr9P63w9sdEnkyQWXTlLjDwHz9PQg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpbXNwaElwVEN2YklkY0Z0
+            Tit1eXhWUWZQM2c1Rkxhd25lbUZhTmpSb21BCnE4S3ZMVFpkRXdUN1R5akdZeVR4
+            NXlYam45ckVJYkhIQmM1a2h1UndlQ2cKLS0tIGtpNWZsUkdkVTZiRGZnald0Zzl0
+            aGlNakRnYVJYZklHY3B0dXJNSmxHWVEKSaKjAr3MM2mL8+8BxaOrcCUtSpFkSmvC
+            CRyrLUkfHZAkA+UZ2qjBCpjfHi5hLJ/y9gTeoAJf+yNP8eU0/6Fkfg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-11-03T04:17:31Z"
-    mac: ENC[AES256_GCM,data:W5Z0lB7RX9wGPiFnjESdH0nk1RwiwY7sWZc4+HXdDtD1XSj4pAAyW/n5xMxQMLoin0kGAS7fIj1fHjM3i2yRN26XhkdX2GjMCNh3lxGVQQSpGp5EiokKI/R5vhfednph2INSBxIBceuMq0vsw4Ty7qU9s+mkKEh79bKAt/amFYY=,iv:t52YEiD13vr7sASxR3GEtni2iqKFPNq7qf2lZQJiLi8=,tag:M0yGdvrKZf9AHCsqYstueg==,type:str]
-    unencrypted_suffix: _unencrypted
+    lastmodified: "2025-11-03T05:03:49Z"
+    mac: ENC[AES256_GCM,data:o/bZMmBWl/wrlsdGqe0UsOWB+IYLTMtU6q+M7OLQOHFQ7NsKLnnUJ6/PA/XTOP8SKhgcWj9Ocox9ifOnvMAlM0pD0QgE+VJv5xkgRwkSCck32SOFrSRlTWWDO7yOv0Y2dtAKKwCJU6OtYUODsGmL4V+/We8z4sbfaJKG2z/HVjM=,iv:K0zKTcKU+XY48Jc7IAIdc56YxRLIUQATpTO8lIe6d1Q=,tag:KJMMzkAv2j7omDupQBB4ag==,type:str]
+    encrypted_regex: ^(data|stringData)$
     version: 3.11.0
