--- a/clusters/my-k3s/apps/base/wordpress/wordpress-ingress.yaml
+++ b/clusters/my-k3s/apps/base/wordpress/wordpress-ingress.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: app.local
+    - host: app.local.com
       http:
         paths:
           - path: /
