--- a/clusters/my-k3s/apps/base/mysql/mysql-secret.sops.yaml
+++ b/clusters/my-k3s/apps/base/mysql/mysql-secret.sops.yaml
@@ -5,20 +5,20 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    username: ENC[AES256_GCM,data:DxeV97m7,iv:lZuZdJoDLe+/0ajij2V4hmk5J6uhF+OulIQ/zYRnp1g=,tag:+dEmkQHY6PDGlLkt1thl9g==,type:str]
-    password: ENC[AES256_GCM,data:R7gtvGc0,iv:2Kg7XqtvTPG9/BOADJHeLh5ukI4mtSHqFbALdrau15I=,tag:eEuqJE1RrPWRwQyZqVMvRQ==,type:str]
+    username: ENC[AES256_GCM,data:pY1qV+w9,iv:LWXaGbMGBZKDLDxMSvfsAQ5CFOjYSleK2gmGYDVUffU=,tag:9BpeqDhIcS9H2o8XHfSpsA==,type:str]
+    password: ENC[AES256_GCM,data:orAkllLB,iv:dQVyB4uSX+W4fjjrOR6QOkTOlhkBDPHeBu4OXyFlMo8=,tag:xCUm/MsUS6FtvLjc4YxBQw==,type:str]
 sops:
     age:
         - recipient: age1es7njt8znvumjqe0swas2vh5c7t3ndzut2knrzxjnpuqcu6x5atqgg7y9v
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpbXNwaElwVEN2YklkY0Z0
-            Tit1eXhWUWZQM2c1Rkxhd25lbUZhTmpSb21BCnE4S3ZMVFpkRXdUN1R5akdZeVR4
-            NXlYam45ckVJYkhIQmM1a2h1UndlQ2cKLS0tIGtpNWZsUkdkVTZiRGZnald0Zzl0
-            aGlNakRnYVJYZklHY3B0dXJNSmxHWVEKSaKjAr3MM2mL8+8BxaOrcCUtSpFkSmvC
-            CRyrLUkfHZAkA+UZ2qjBCpjfHi5hLJ/y9gTeoAJf+yNP8eU0/6Fkfg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNN3FROU03eXFSRXBxWEw3
+            WDhwbHlzVTh6UUtlSThqdU93dVVYUTd5VmdvCkgrR0lGQnFtekRqRVNUclFNWXU1
+            S0E0S2RibHh2ekxQWTcrZUMrRVFtRUkKLS0tIDRDVmtEL09RcjVERGpJdmRsR2pv
+            RUNDSW9BZ1hqY0JPaVo3WUcyN0E1QWMKlU8eX3isqSyzprkuiF0JAdhh2AMzpzvx
+            A+KIFHct9yzB/I/8Y8ic4VS1/NBbq0uQsni2XyjIysoGPZwWD4NdqQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-11-03T05:03:49Z"
-    mac: ENC[AES256_GCM,data:o/bZMmBWl/wrlsdGqe0UsOWB+IYLTMtU6q+M7OLQOHFQ7NsKLnnUJ6/PA/XTOP8SKhgcWj9Ocox9ifOnvMAlM0pD0QgE+VJv5xkgRwkSCck32SOFrSRlTWWDO7yOv0Y2dtAKKwCJU6OtYUODsGmL4V+/We8z4sbfaJKG2z/HVjM=,iv:K0zKTcKU+XY48Jc7IAIdc56YxRLIUQATpTO8lIe6d1Q=,tag:KJMMzkAv2j7omDupQBB4ag==,type:str]
+    lastmodified: "2025-11-19T04:55:59Z"
+    mac: ENC[AES256_GCM,data:kYYmbVvcClNAOMvY+Pi/K/y+lSnyRVUTklXgha8Y+uY7zb+MBKq0LvzhSlMAanl9Wo4A7q37WohxLpqx9eYCt4eA5x2Tt8ZXJl/QR/XWRLdQaYE3DiEZ95s2prQFeMEqxlF7N1nECGJSTagbhtO+KBhgchMHRcarjT3k55rzvZw=,iv:Fj1a6tEnFPeoxy7UI8jiL7V+oL2YqgWkoY4LeyWI5BE=,tag:UvJMDGjDU+xWxQ+KgfFGhQ==,type:str]
     encrypted_regex: ^(data|stringData)$
     version: 3.11.0
