--- a/clusters/my-k3s/apps/base/mysql/mysql-secret.sops.yaml
+++ b/clusters/my-k3s/apps/base/mysql/mysql-secret.sops.yaml
@@ -5,20 +5,20 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    username: ENC[AES256_GCM,data:pY1qV+w9,iv:LWXaGbMGBZKDLDxMSvfsAQ5CFOjYSleK2gmGYDVUffU=,tag:9BpeqDhIcS9H2o8XHfSpsA==,type:str]
-    password: ENC[AES256_GCM,data:orAkllLB,iv:dQVyB4uSX+W4fjjrOR6QOkTOlhkBDPHeBu4OXyFlMo8=,tag:xCUm/MsUS6FtvLjc4YxBQw==,type:str]
+    username: ENC[AES256_GCM,data:xPxKI4VC,iv:hGc1v+LyFGLkBqqKso1QKX1W9TJUtlmMp82/oNZ1V5o=,tag:G1+Vm48JUoBr5sOjHycPig==,type:str]
+    password: ENC[AES256_GCM,data:AZZ6Ue3l,iv:WHyjf0wArqRvhSJllQKK+ZoCAZHElsQvOOwVM7kZrgk=,tag:BWYYfyubU6euhcdNRPjqdg==,type:str]
 sops:
     age:
         - recipient: age1es7njt8znvumjqe0swas2vh5c7t3ndzut2knrzxjnpuqcu6x5atqgg7y9v
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNN3FROU03eXFSRXBxWEw3
-            WDhwbHlzVTh6UUtlSThqdU93dVVYUTd5VmdvCkgrR0lGQnFtekRqRVNUclFNWXU1
-            S0E0S2RibHh2ekxQWTcrZUMrRVFtRUkKLS0tIDRDVmtEL09RcjVERGpJdmRsR2pv
-            RUNDSW9BZ1hqY0JPaVo3WUcyN0E1QWMKlU8eX3isqSyzprkuiF0JAdhh2AMzpzvx
-            A+KIFHct9yzB/I/8Y8ic4VS1/NBbq0uQsni2XyjIysoGPZwWD4NdqQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlb05RbnB1MDZxZ293Zi9D
+            NmM2ZjFONTFqZDRqcE9ZZWV0RVAvdUxBTlJzCjViaTJESElNK0ozRkJHMTFxamZH
+            dWRyaWd4a25Majh3TkVKNjFqeWVyalUKLS0tIHA3czVhREtQM3dGSDlFaVdFcFZG
+            ZGNYcjMySFNKa21UZEZmZmdGZFlEcHMK4I4Cac3w95K5F8vRbHV+njyUJoZczSRj
+            5LP6K9F7bX8EbRgxjJ1hyKiovrBbv50nN4jR8UR0fuDVGkNFbmp2rA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-11-19T04:55:59Z"
-    mac: ENC[AES256_GCM,data:kYYmbVvcClNAOMvY+Pi/K/y+lSnyRVUTklXgha8Y+uY7zb+MBKq0LvzhSlMAanl9Wo4A7q37WohxLpqx9eYCt4eA5x2Tt8ZXJl/QR/XWRLdQaYE3DiEZ95s2prQFeMEqxlF7N1nECGJSTagbhtO+KBhgchMHRcarjT3k55rzvZw=,iv:Fj1a6tEnFPeoxy7UI8jiL7V+oL2YqgWkoY4LeyWI5BE=,tag:UvJMDGjDU+xWxQ+KgfFGhQ==,type:str]
+    lastmodified: "2025-11-19T05:23:40Z"
+    mac: ENC[AES256_GCM,data:v1SrugjLRGSou3jMDQ4MaIDayrSntdeazlit2Ac11pxrZ7fOAvA8/LvV78lnGV6ECmJnP+R4UIJ+aqt4iZdZg5A070Qe8FzcJK0mBcDECjOCYoz/W3XAcpIqtrWGB0GprnLkeOM87C0DnJehl0m1P8UFBY+W8EnNfLuSSUNsfpo=,iv:ymcx51/Ss8/M4JP3gO7MH1PTRjI8aH1iMo+oCHKix8M=,tag:UaktCP4YvGZm+UG/Tj+u9Q==,type:str]
     encrypted_regex: ^(data|stringData)$
     version: 3.11.0
