--- a/clusters/my-k3s/apps/base/mysql/mysql-secret.sops.yaml
+++ b/clusters/my-k3s/apps/base/mysql/mysql-secret.sops.yaml
@@ -5,20 +5,20 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    username: ENC[AES256_GCM,data:xPxKI4VC,iv:hGc1v+LyFGLkBqqKso1QKX1W9TJUtlmMp82/oNZ1V5o=,tag:G1+Vm48JUoBr5sOjHycPig==,type:str]
-    password: ENC[AES256_GCM,data:AZZ6Ue3l,iv:WHyjf0wArqRvhSJllQKK+ZoCAZHElsQvOOwVM7kZrgk=,tag:BWYYfyubU6euhcdNRPjqdg==,type:str]
+    username: ENC[AES256_GCM,data:CjTtyU4K,iv:lO9yG6fEond8iXvoamwPMdR3n8VYv2ruu/KDl+rcekg=,tag:7tYPvkGm3AybkeR/D9ygrQ==,type:str]
+    password: ENC[AES256_GCM,data:sMw+YBuv,iv:ExB7bC8/m1lIhl6w/n5wZSgKKb7+L1Dt4RYhYop3doc=,tag:aeGRSHj6TXRcQiUSTIo3iQ==,type:str]
 sops:
     age:
         - recipient: age1es7njt8znvumjqe0swas2vh5c7t3ndzut2knrzxjnpuqcu6x5atqgg7y9v
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlb05RbnB1MDZxZ293Zi9D
-            NmM2ZjFONTFqZDRqcE9ZZWV0RVAvdUxBTlJzCjViaTJESElNK0ozRkJHMTFxamZH
-            dWRyaWd4a25Majh3TkVKNjFqeWVyalUKLS0tIHA3czVhREtQM3dGSDlFaVdFcFZG
-            ZGNYcjMySFNKa21UZEZmZmdGZFlEcHMK4I4Cac3w95K5F8vRbHV+njyUJoZczSRj
-            5LP6K9F7bX8EbRgxjJ1hyKiovrBbv50nN4jR8UR0fuDVGkNFbmp2rA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBQckJNMWZnUlk1cys3Z1pm
+            RWI4MVpSVG5WQUhqT1pFT2VvYWJ1bUNoTWgwCkpCS200SmljWi9tTGFFQVY1WitE
+            Y2R3UUJ1UmdOVmVNWHRUaXRVT0VQQlUKLS0tIGhOMktORllFcUs2U3Rrd2doMGNK
+            a21naGQrcXRINlJnT3NWZHliY0l1RzgKjw3IaZFWK/7bWOHCahK3Y9n+5wZNid5B
+            0Cng1ALa/9ebgeITv7WS7cv7OAEgB18a1kIAKXRYKBRAKy4gUMGEZQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-11-19T05:23:40Z"
-    mac: ENC[AES256_GCM,data:v1SrugjLRGSou3jMDQ4MaIDayrSntdeazlit2Ac11pxrZ7fOAvA8/LvV78lnGV6ECmJnP+R4UIJ+aqt4iZdZg5A070Qe8FzcJK0mBcDECjOCYoz/W3XAcpIqtrWGB0GprnLkeOM87C0DnJehl0m1P8UFBY+W8EnNfLuSSUNsfpo=,iv:ymcx51/Ss8/M4JP3gO7MH1PTRjI8aH1iMo+oCHKix8M=,tag:UaktCP4YvGZm+UG/Tj+u9Q==,type:str]
+    lastmodified: "2025-11-19T10:34:04Z"
+    mac: ENC[AES256_GCM,data:xLyRXipAkKPzadiGXwkdgvy94CAWlRujOcKqOr6g/FolNPP6dkDA5TOsBVcb16W880oPZkYwVbGE4NSmgqpJX8I18Qb4/4p2yd9mICVN+TIrvbDTJkUQobzAfNRGj7KlOlkiYyhXkkAuiRNvSSUAajfAmnKg2Xyq1RvqjIpMJW8=,iv:idn1kRGaTCtGpsJy0uEIpO16KFi4YrmUbucLi4AvoF8=,tag:QtV1rq1hyB+v8afxphUE1g==,type:str]
     encrypted_regex: ^(data|stringData)$
     version: 3.11.0
