--- a/clusters/my-k3s/apps/base/mysql/mysql-secret.sops.yaml
+++ b/clusters/my-k3s/apps/base/mysql/mysql-secret.sops.yaml
@@ -5,20 +5,20 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    username: ENC[AES256_GCM,data:CjTtyU4K,iv:lO9yG6fEond8iXvoamwPMdR3n8VYv2ruu/KDl+rcekg=,tag:7tYPvkGm3AybkeR/D9ygrQ==,type:str]
-    password: ENC[AES256_GCM,data:sMw+YBuv,iv:ExB7bC8/m1lIhl6w/n5wZSgKKb7+L1Dt4RYhYop3doc=,tag:aeGRSHj6TXRcQiUSTIo3iQ==,type:str]
+    username: ENC[AES256_GCM,data:lCvb5oVd,iv:4llbKA5gPlXzwc00fyTZn72lh3IKkTdfK4SZM9+qjKE=,tag:oq+AB40WLUeeTN82c8p7yA==,type:str]
+    password: ENC[AES256_GCM,data:n9RhLfAz,iv:6cgpmR5lruqr0yBtdL/jMdXn2rrGnOLX8xHbcv/C9Lc=,tag:FPbD3PwDC3YrH0QkqbtS8Q==,type:str]
 sops:
     age:
         - recipient: age1es7njt8znvumjqe0swas2vh5c7t3ndzut2knrzxjnpuqcu6x5atqgg7y9v
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBQckJNMWZnUlk1cys3Z1pm
-            RWI4MVpSVG5WQUhqT1pFT2VvYWJ1bUNoTWgwCkpCS200SmljWi9tTGFFQVY1WitE
-            Y2R3UUJ1UmdOVmVNWHRUaXRVT0VQQlUKLS0tIGhOMktORllFcUs2U3Rrd2doMGNK
-            a21naGQrcXRINlJnT3NWZHliY0l1RzgKjw3IaZFWK/7bWOHCahK3Y9n+5wZNid5B
-            0Cng1ALa/9ebgeITv7WS7cv7OAEgB18a1kIAKXRYKBRAKy4gUMGEZQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBHTlJ4UDFlSStONWMxZXNz
+            VkRtU3RVNlBmVUsvK0ExUXJMTEM4akZFNkh3CnRCa2J1MWpOOEdjSTFHeGwyeGFB
+            Rzh0b3NzdThrb1UreThVWTVrNGdMWHcKLS0tIHNyUVRPeFJLa01vVllTUUFQb2N1
+            dHc4N2liNUVRSVVTUmZJNWtidlAzTDQKoxuepUxmfb10dy6ekTahnE0qYnAJ0EC/
+            a9Z3qVgsTtxUrsTLlzCerRvp3yXA5oyPCR77vqNzK5B5tdfcqqcC5w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-11-19T10:34:04Z"
-    mac: ENC[AES256_GCM,data:xLyRXipAkKPzadiGXwkdgvy94CAWlRujOcKqOr6g/FolNPP6dkDA5TOsBVcb16W880oPZkYwVbGE4NSmgqpJX8I18Qb4/4p2yd9mICVN+TIrvbDTJkUQobzAfNRGj7KlOlkiYyhXkkAuiRNvSSUAajfAmnKg2Xyq1RvqjIpMJW8=,iv:idn1kRGaTCtGpsJy0uEIpO16KFi4YrmUbucLi4AvoF8=,tag:QtV1rq1hyB+v8afxphUE1g==,type:str]
+    lastmodified: "2025-11-19T10:42:17Z"
+    mac: ENC[AES256_GCM,data:p8G31aP1d3xGneRw/yxGWiIYyP0Rj53YE1qVn6nE3+oq3Mjv/StVPuBeh1Dn+Z39CEriAi08LqauvKXVsZHv8HGKfLdZ+IZGPZERecxDPqyFIV9fVdvOcVxzdUarbxYMmw2IgRW5uWpe5rLh33aaGYglc6U2xvYNae4UTywn+Iw=,iv:/veWDp8Mkv3g0SL++tVg6uhWre/MvdKNxbZEJA+0K7o=,tag:recjikpwv7vH10Es/0obbA==,type:str]
     encrypted_regex: ^(data|stringData)$
     version: 3.11.0
